--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -11,8 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install ARM GCC
-      run: sudo apt-get install -y gcc-arm-none-eabi
+    - name: Install GNU Arm Embedded Toolchain
+      uses: ryanwinter/arm-none-eabi-gcc@master
+      with:
+        release: '10.3-2021.10'
 
     - uses: actions/checkout@v3
 
